alignmet issue fixed

--- a/src/Components/HomePagecomp/Blogcomp/Blog.css
+++ b/src/Components/HomePagecomp/Blogcomp/Blog.css
@@ -112,5 +112,8 @@
       padding: 10px 15px;
       margin-top: 8px; 
     }
+    .Blog-readmore-btn{
+      margin-top: 15px; 
+    }
   }
   
