--- a/src/Components/Productcomp/DriverMonitoringProduct/WhatisNeedcomp/Whatisneed.css
+++ b/src/Components/Productcomp/DriverMonitoringProduct/WhatisNeedcomp/Whatisneed.css
@@ -114,7 +114,10 @@
       font-size: 2rem;
   }
   .whatis-standparagraphtext {
-      padding: 1.5em;
+    padding: 1em;
+    text-align: justify !important;
+  hyphens:auto;
+
   }
   .whatis-box {
       width: 30%; 
