--- a/src/Components/Productcomp/SurroundviewProduct/WhatisNeedcomp/Whatisneed.css
+++ b/src/Components/Productcomp/SurroundviewProduct/WhatisNeedcomp/Whatisneed.css
@@ -121,8 +121,9 @@
       font-size: 2rem;
   }
   .whatis-standparagraphtext {
-      padding: 1.5em;
-      text-align: justify;
+    padding: 1em;
+    text-align: justify !important;
+  hyphens:auto;
   }
   .whatis-box {
       width: 30%; 
